--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
     <div class="main">
         <div class="flex-container">
             <div class="flex-item">
-                <img src="images/icon1.png">
+                <img src="Images/icon1.png">
                 <h5>TECHNICAL CLUBS</h5>
                 <p>Brush up your technical skills with exposure</p>
             </div>
 
             <div class="flex-item">
-                <img src="images/icon2.png">
+                <img src="Images/icon2.png">
                 <h5>CULTURAL CLUBS</h5>
                 <p>Explore your creativity among friends</p>
             </div>
 
             <div class="flex-item">
-                <img src="images/icon3.png">
+                <img src="Images/icon3.png">
                 <h5>SPORTS CLUBS</h5>
                 <p>Healthy Mind requires a Healthy Body</p>
             </div>
@@ -94,19 +94,19 @@
 
         <div class="flex-container">
             <div class="flex-item">
-                <img src="images/icon4.png">
+                <img src="Images/icon4.png">
                 <h5>ABHIKALPAN</h5>
                 <p>The annual technical festival of IIITDMJ.</p>
             </div>
 
             <div class="flex-item">
-                <img src="images/icon5.png">
+                <img src="Images/icon5.png">
                 <h5>TARANG</h5>
                 <p>The annual cultural festival of IIITDMJ.</p>
             </div>
 
             <div class="flex-item">
-                <img src="images/icon6.png">
+                <img src="Images/icon6.png">
                 <h5>GUSTO</h5>
                 <p>The annual sports festival of IIITDMJ.</p>
             </div>
@@ -123,19 +123,19 @@
         <div class="main">
             <div class="flex-container">
                 <div class="flex-item" id="big-item">
-                    <img src="images/icon7.png">
+                    <img src="Images/icon7.png">
                     <h5>ROBOCON</h5>
                     <p>An international arena based robotics competition.</p>
                 </div>
 
                 <div class="flex-item" id="big-item">
-                    <img src="images/icon8.png">
+                    <img src="Images/icon8.png">
                     <h5>SUPRA</h5>
                     <p>International IC engine formula student car competition.</p>
                 </div>
 
                 <div class="flex-item" id="big-item">
-                    <img src="images/icon9.png">
+                    <img src="Images/icon9.png">
                     <h5>FORMULA BHARAT</h5>
                     <p>International Electric formula student car competition.</p>
                 </div>
