made responsive, just navbar is left

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
      
     <!-- main-section -->
         <div class="showcase">
+            <img src="images/mic-bg.png" alt="" class="main-image">
             <h1>SAAZ</h1>
             <h2>The Music Club of IIITDMJ</h2>
         </div>
